2013-11-01  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Support valgrind, running DTrace via a wrapper script.
	Pointer-elision skips valgrind errors.

2013-10-31  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dtrace.h (dtrace_stmtdesc_t): Add padding to work
	around a GCC bug.
	* INCOMPATIBILITIES: Document it.

2013-10-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_lex.c (YY_INPUT): Split out into...
	(dt_input): ... this new function.  No longer check for parser
	errors.  Use memcpy() for string input.
	(EOF rules): Introduce, for states S1 and S3.
	* test/unittest/lexer/err.eof-in-comment.d: Check that EOF in a
	comment is diagnosed.
	* test/unittest/lexer/err.eof-in-pragma.d: Likewise, for pragmata.
	* test/unittest/lexer/tst.yyinput-pragma-bug.d: Make sure that
	pragmata that span the 8192-byte boundary do not cause spurious
	errors.
	* NEWS: Describe this change.

2013-09-26  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (DLIBSRCS): No longer used, delete.

2013-09-19  Nick Alcock  <nick.alcock@oracle.com>

	* Build: Install NEWS too.
	* GNUmakefile: This is 0.4.0.

2013-09-18  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES: Update.
	* NEWS: Likewise.
	* dtrace-utils.spec: Likewise.

2013-09-11  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pid.c (dt_pid_create_probes): Avoid direct lock use.
	* libdtrace/dt_proc.h (dt_proc_t.dpr_cond_waiting): Remove.
	Note the set of currently valid proxy requests.
	* libdtrace/dt_proc.c (dt_proc_loop): Split out of
	dt_proc_control() and add awaiting_continue machinery and
	dt_proc_continue handling.
	(dt_proc_continue): Use it.
	(dt_proc_stop): No longer maintain dt_proc_waiting or wait on the
	dpr_cv: thunk down to dt_proc_loop() instead, exiting fast if the
	process has terminated while there.  Force the lock count to 1 so
	that dt_proc_loop() can unlock it, not 0.
	(dt_proc_control_cleanup): No longer check dpr_cond_waiting.